# SoundSharingV2-Beta-

./: .gitignore  README.md  ice-log.txt  implementation_plan.md  package.json  pnpm-lock.yaml  pnpm-lock.yaml.1844063138  pnpm-lock.yaml.3291920368  tsconfig.base.json
backend/: package.json  tsconfig.json
backend/src/: config.ts  logger.ts  rateLimit.ts  server.ts  sessionStore.ts  signaling.ts
backend/test/: rateLimit.test.ts  sessionStore.test.ts  signaling.test.ts
convex/: schema.d.ts  schema.d.ts.map  schema.js  schema.js.map  schema.ts  signaling.d.ts  signaling.d.ts.map  signaling.js  signaling.js.map  signaling.ts
convex/_generated/: api.d.ts
desktop/: index.html  package.json  tsconfig.json
desktop/src/: App.tsx  convexSignaling.ts  main.tsx  ringBuffer.ts  sidecar.ts  styles.css  useHostAudio.ts  useWebSocketAudioSender.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  lib.rs  main.rs  sidecar.rs
desktop/src/views/: HostSessionView.tsx
mobile/: .easignore  App.tsx  app.json  eas.json  metro.config.js  package.json  tsconfig.json
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/android/app/: build.gradle
mobile/src/screens/: JoinScreen.tsx  ListeningScreen.tsx  QrScannerModal.tsx
mobile/src/webrtc/: useListenerConnection.ts
mobile/src/websocket/: useWebSocketListener.ts
shared/: package.json
shared/src/: events.ts  index.ts  qr.ts  session.ts
shared/test/: qr.test.ts
(+5 files in other folders)
